a1/brendan_gordon/TEST_PROGRAMS/invalidtype/jonathan_campbell/2.min
var s: string;

while s do
	s = s + 1;
done
